<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">alQuran</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">alQuran</string>
    <string name="surah_list">Surah List</string>
    <string name="book_mark">Bookmark</string>
    <string name="references">References</string>
    <string name="referesh">Refresh</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmark_hint">Enter notes (Optional)</string>
    <string name="down">Down</string>
    <string name="setting_string">This is settings page</string>
    <string name="alquranV2">alQuran v2</string>
    <string name="splashDescription">Splash screen</string>
    <string name="opening">1. The Opening</string>
    <string name="juz">1. جزء</string>
    <string name="versesColon">Verses: </string>
    <string name="juzColon">Juz: </string>
    <string name="seperator">/</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="playerTitle">Saud AlShuraim Recitation</string>
    <string name="matn">صِرٰطَ الَّذينَ أَنعَمتَ عَلَيهِم غَيرِ المَغضوبِ عَلَيهِم وَلَا الضّالّينَ</string>
    <string name="surah_names">مكة الفاتحة</string>
    <string name="loading_database">Loading Database for the first time. Please be patient!</string>
    <string name="title_activity_surah_tab1">SurahTab1</string>

    <!-- Settings page strings -->
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="general">General</string>
    <string name="select">Select</string>
    <string name="update">Update</string>
    <string name="manage">Manage</string>
    <string name="explainations">Explainations</string>
    <string name="expression_of_quran">Expression of the Quran</string>
    <string name="the_reasons_come_down">The reasons come down</string>
    <string name="manage_files">Manages Files</string>
    <string name="recitation">Recitation</string>
    <string name="recitation_files">Recitation Files</string>
    
    
    <!-- Manage file strings -->
    <string name="tap_to_download">Tap on Surah below to download a single recitation or swipe over it to delete.</string>
    <string name="download_all">Download All</string>
    <string name="delete_all">Delete All</string>
    <string name="delete">Delete</string>
    <string name="update_timing">Update Timing file</string>
    <string name="recitation_for_saud_alshuraim">Recitation for Saud AlShuraim</string>
    <string name="download_recitation_file">Download recitation files</string>
    
    
    
    <!-- WebView page strings -->
    <string name="back">Back</string>
    
    <!-- global strings  -->
    
    <string name="font_face">font/DroidSansArabic.ttf</string>
    
    <string name="select_reader">Select Reader</string>
    <string name="surah">Surah</string>
    <string name="ayah">Ayah</string>
    <string name="surahTab">Surah   سورة</string>
    <string name="juzTab">Juz   جزء </string>
    
</resources>