<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_header">

        <ImageButton
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/repeatalways"
            android:contentDescription="@string/referesh"
            android:paddingBottom="30dip">
        </ImageButton>

        <Button
            android:id="@+id/btnBookm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dip"
            android:text="@string/bookmarks">
        </Button>

        <Button
            android:id="@+id/btnRefer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="40dip"
            android:text="@string/references">
        </Button>

        <ImageButton
            android:id="@+id/down"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/scrolldown"
            android:onClick="close"
            android:contentDescription="@string/down">
        </ImageButton>
    </LinearLayout>

    <LinearLayout
        style="@style/SurahMain"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/padding_home_top" >
        <ListView
		    android:id="@+id/bookmarkList"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_gravity="right"
		    android:background="@color/background1"
		    android:cacheColorHint="@android:color/transparent"
		    android:divider="@color/Grey"
		    android:dividerHeight="1dip" >
			
		</ListView>
    </LinearLayout>

</RelativeLayout>