<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        style="@style/SearchTitleBar"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/search"
            android:text="@string/menu_settings"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            style="@style/ButtonText"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/search_button_selector"
            android:onClick="close"
            android:text="@string/done" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/padding_home_top"
        android:fadingEdge="none"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_background"
            android:orientation="vertical"
            android:paddingBottom="13dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/general"
                android:textColor="#4C566C"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_top"
                    android:onClick="gotoAbout"
                    android:paddingLeft="10dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignParentLeft="true"
                        android:gravity="center_vertical"
                        android:text="@string/about"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/select"
                        android:src="@drawable/arrow" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bottom"
                    android:onClick="gotoHelp"
                    android:paddingLeft="10dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignParentLeft="true"
                        android:gravity="center_vertical"
                        android:text="@string/help"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/select"
                        android:src="@drawable/arrow" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/select_reader"
                android:textColor="#4C566C"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_curve_layout"
                    android:onClick="selectRecitation"
                    android:paddingLeft="10dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignParentLeft="true"
                        android:gravity="center_vertical"
                        android:text="@string/surah"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/selected_reader_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="25dp"
                        android:gravity="center_vertical"
                        android:text="@string/select_reader"
                        android:textColor="#0054FF"
                        android:textSize="13sp" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/select"
                        android:src="@drawable/arrow" />
                </RelativeLayout>
            </LinearLayout>

            <!-- Aayah Selection -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_curve_layout"
                    android:onClick="selectAyahReader"
                    android:paddingLeft="10dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignParentLeft="true"
                        android:gravity="center_vertical"
                        android:text="@string/ayah"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/selected_aayah_reader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="25dp"
                        android:gravity="center_vertical"
                        android:text="@string/select_reader"
                        android:textColor="#0054FF"
                        android:textSize="13sp" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/select"
                        android:src="@drawable/arrow" />
                </RelativeLayout>
            </LinearLayout>

            <!-- Aayah Selection completed -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/manage"
                android:textColor="#4C566C"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_curve_layout"
                    android:onClick="manageFiles"
                    android:paddingLeft="10dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignParentLeft="true"
                        android:gravity="center_vertical"
                        android:text="@string/recitation_files"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/select"
                        android:src="@drawable/arrow" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>